# micro-payment

./: Cargo.toml  Makefile  README.md
circuit/: README.md  package.json
circuit/circuits/: payment.circom  payment.sym
circuit/test/: test_eddsa.ts  test_payment.ts
circuit/test/circuits/: test_eddsa.circom  test_payment_64_4.circom
contract/: Cargo.toml  optimize.sh
contract/examples/: schema.rs
contract/schema/: contract.json
contract/schema/raw/: execute.json  instantiate.json  response_to_config.json  response_to_payment_chan.json
contract/src/: contract.rs  error.rs  handler.rs  lib.rs  msg.rs  state.rs  test.rs  zkp.rs
schema/: contract.json
schema/raw/: execute.json  query.json  response_to_config.json  response_to_payment_chan.json
specs/: 01-intro.md  02-contracts.md  03-circuit.md  04-channel-service.md
