[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.2.7"
cosmwasm-storage = "1.2.7" 
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw721-base = "0.18.0"
cw721 = "0.18.0"
hex = "0.4.3"
schemars = "0.8.10"
serde = { version = "1.0.144", default-features = false, features = ["derive"] }
thiserror = "=1.0.39"
unicode-segmentation = "1.10.1"
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
blake2b-ref = "0.3.1"
cosmwasm-schema = "1.2.7" # A dev-dependency for CosmWasm contracts to generate JSON Schema files.
cw20 = "1.1.1"
cosmwasm-tools= {git = "https://github.com/jacksoom/cosmwasm-tools"}
lazy_static = "1.4.0"
# ark-circom = { git = "https://github.com/gotabit/circom-compat" }
# ark-bn254 = { version = "=0.4.0" }
# ark-ec = { version = "=0.4.1", default-features = false, features = ["parallel"] }
# num-bigint = { version = "=0.4.3", default-features = false, features = ["rand"] }
# ark-std = { version = "=0.4.0", default-features = false, features = ["parallel"] }
# ark-groth16 = { version = "=0.4.0", default-features = false, features = ["parallel"] }
# color-eyre = "=0.6.2"
